Remove viewport values and correct align-items value

--- a/app/static/css/_index.scss
+++ b/app/static/css/_index.scss
@@ -12,7 +12,7 @@
 
     &__icons {
       text-align: center;
-      @include flexbox(flex, space-between, center);
+      @include flexbox(flex, center, space-between);
       width: 40%;
       margin: 0 auto;
 
